started building UI for rock paper scissors game.

--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,9 @@ button{
     color: black;
     padding: 10px 25px;
 }
+
+.line{
+    flex-grow: 1;
+    font-size: 90px;
+    text-align: center;
+}
