--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ h1 span{
 
 .content{
     display: flex;
+    justify-content: space-around;
     
 }
 
@@ -49,7 +50,16 @@ button{
 }
 
 .line{
-    flex-grow: 1;
+    flex-grow: 0;
     font-size: 90px;
     text-align: center;
+    width: 5px;
+    height: 50vh;
+    background-color: white;
+}
+
+.scoreTitle{
+    border-bottom: 5px solid white;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
 }
